# secfilr

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
src/rewrite/: _models.py  _urls.py  _xbrl_labels.py  exceptions.py
src/secfilr/: __init__.py  _mappings.py  _models.py  _network.py  _parse.py  _xbrl_labels.py  company.py  downloader.py  fetch.py  parser.py
src/secfilr/config/: _paths.py  _urls.py  credentials.py
src_old/: _networking.py  clean.py  client.py  exceptions.py  fetcher.py  schemas.py
tests/: test_api.py  test_secfilr.py
